k8s/04-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: microshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: 192.168.182.166/library/redis:7-alpine
        ports:
        - containerPort: 6379
        readinessProbe:
          exec:
            command: ["redis-cli", "ping"]   # 返回 PONG 才算就绪
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests: {memory: "32Mi", cpu: "50m"}
          limits:   {memory: "128Mi", cpu: "250m"}
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: microshop
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
