k8s/07-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: microshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 192.168.182.166/library/frontend:1.0
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet: {path: /, port: 80}
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests: {memory: "16Mi", cpu: "50m"}
          limits:   {memory: "128Mi", cpu: "250m"}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: microshop
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
